--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<div class="container">
-  <div class="card">
-    <div class="card-body">
-      <h1>Hello World!</h1>
-      <p>
-        <a href="#">Link to Mars</a>
+<div>
+  <bs-nav-bar></bs-nav-bar>
+  <main role="main" class="container">
+    <div class="starter-template">
+      <h1>Bootstrap starter template</h1>
+      <p class="lead">
+        Use this document as a way to quickly start any new project.<br />
+        All you get is this text and a mostly barebones HTML document.
       </p>
     </div>
-  </div>
+  </main>
 </div>
