--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./assets/styles/bootstrap_customizations.scss";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+body {
+  padding-top: 80px;
+}
