--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -22,20 +22,23 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">shopping cart</a>
       </li>
-      <li class="nav-item dropdown">
+      <li ngbDropdown class="nav-item dropdown">
         <a
+          ngbDropdownToggle
           class="nav-link dropdown-toggle"
-          href="http://example.com"
+          href="#"
           id="dropdown01"
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
           >Dropdown</a
         >
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
+          <a ngbDropdownItem class="dropdown-item" href="#">Action</a>
+          <a ngbDropdownItem class="dropdown-item" href="#">Another action</a>
+          <a ngbDropdownItem class="dropdown-item" href="#"
+            >Something else here</a
+          >
         </div>
       </li>
     </ul>
