--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./assets/styles/bootstrap_customizations.scss";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
 
 body {
   padding-top: 80px;
