--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" routerLink="/">Organic shop</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -14,11 +14,6 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/"
-          >Home <span class="sr-only">(current)</span></a
-        >
-      </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">shopping cart</a>
       </li>
@@ -26,32 +21,25 @@
         <a
           ngbDropdownToggle
           class="nav-link dropdown-toggle"
-          href="#"
           id="dropdown01"
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
-          >Dropdown</a
+          >User Name</a
         >
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-          <a ngbDropdownItem class="dropdown-item" href="#">Action</a>
-          <a ngbDropdownItem class="dropdown-item" href="#">Another action</a>
-          <a ngbDropdownItem class="dropdown-item" href="#"
-            >Something else here</a
+          <a ngbDropdownItem class="dropdown-item" routerLink="/my/orders"
+            >My Orders</a
           >
+          <a ngbDropdownItem class="dropdown-item" routerLink="/admin/orders"
+            >manage Orders</a
+          >
+          <a ngbDropdownItem class="dropdown-item" routerLink="/admin/products"
+            >Manage Products</a
+          >
+          <a ngbDropdownItem class="dropdown-item">Log Out</a>
         </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input
-        class="form-control mr-sm-2"
-        type="text"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
-      </button>
-    </form>
   </div>
 </nav>
