--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<div class="container">
+  <button class="btn btn-primary" (click)="login()">Login with Google</button>
+</div>
