--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -17,6 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">shopping cart</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login">Log in</a>
+      </li>
       <li ngbDropdown class="nav-item dropdown">
         <a
           ngbDropdownToggle
