--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -17,10 +17,10 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">shopping cart</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="!user" class="nav-item">
         <a class="nav-link" routerLink="/login">Log in</a>
       </li>
-      <li ngbDropdown class="nav-item dropdown">
+      <li ngbDropdown *ngIf="user" class="nav-item dropdown">
         <a
           ngbDropdownToggle
           class="nav-link dropdown-toggle"
@@ -28,7 +28,7 @@
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
-          >User Name</a
+          >{{ user.displayName }}</a
         >
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a ngbDropdownItem class="dropdown-item" routerLink="/my/orders"
@@ -40,7 +40,9 @@
           <a ngbDropdownItem class="dropdown-item" routerLink="/admin/products"
             >Manage Products</a
           >
-          <a ngbDropdownItem class="dropdown-item">Log Out</a>
+          <a ngbDropdownItem (click)="logOut()" class="dropdown-item"
+            >Log Out</a
+          >
         </div>
       </li>
     </ul>
