--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -17,10 +17,17 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">shopping cart</a>
       </li>
-      <li *ngIf="!user" class="nav-item">
-        <a class="nav-link" routerLink="/login">Log in</a>
-      </li>
-      <li ngbDropdown *ngIf="user" class="nav-item dropdown">
+      <ng-template #annoymousUser>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Log in</a>
+        </li>
+      </ng-template>
+
+      <li
+        ngbDropdown
+        *ngIf="user$ | async as user; else annoymousUser"
+        class="nav-item dropdown"
+      >
         <a
           ngbDropdownToggle
           class="nav-link dropdown-toggle"
