--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -25,7 +25,7 @@
 
       <li
         ngbDropdown
-        *ngIf="user$ | async as user; else annoymousUser"
+        *ngIf="auth.user$ | async as user; else annoymousUser"
         class="nav-item dropdown"
       >
         <a
