--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -25,7 +25,7 @@
 
       <li
         ngbDropdown
-        *ngIf="auth.user$ | async as user; else annoymousUser"
+        *ngIf="appUser; else annoymousUser"
         class="nav-item dropdown"
       >
         <a
@@ -35,18 +35,24 @@
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
-          >{{ user.displayName }}</a
+          >{{ appUser.name }}</a
         >
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a ngbDropdownItem class="dropdown-item" routerLink="/my/orders"
             >My Orders</a
           >
-          <a ngbDropdownItem class="dropdown-item" routerLink="/admin/orders"
-            >manage Orders</a
-          >
-          <a ngbDropdownItem class="dropdown-item" routerLink="/admin/products"
-            >Manage Products</a
-          >
+          <ng-container *ngIf="appUser.isAdmin">
+            <a ngbDropdownItem class="dropdown-item" routerLink="/admin/orders"
+              >manage Orders</a
+            >
+            <a
+              ngbDropdownItem
+              class="dropdown-item"
+              routerLink="/admin/products"
+              >Manage Products</a
+            >
+          </ng-container>
+
           <a ngbDropdownItem (click)="logOut()" class="dropdown-item"
             >Log Out</a
           >
