--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,29 +1,29 @@
-<form>
+<form #f="ngForm" (ngSubmit)="save(f.value)" >
   <!-- title -->
   <div class="form-group">
     <label for="title">Title</label>
-    <input id="title" type="text" class="form-control" />
+    <input ngModel name="title" id="title" type="text" class="form-control" />
   </div>
   <!-- price -->
   <div class="form-group">
     <label for="price">Price</label>
     <div class="input-group-prepend">
       <span class="input-group-text">₹</span>
-      <input id="price" type="number" class="form-control" />
+      <input ngModel name="price" id="price" type="number" class="form-control" />
     </div>
   </div>
   <!-- category -->
   <div class="form-group">
     <label for="category">Category</label>
-    <select id="category" type="number" class="form-control">
+    <select ngModel name="category" id="category" type="number" class="form-control">
       <option value=""></option>
-      <option *ngFor="let c of categories$ |async " value="c.$key"> {{c.name }}</option>
+      <option *ngFor="let c of categories$ |async " [value]="c.value"> {{c.name }}</option>
     </select>
   </div>
   <!-- img URL -->
   <div class="form-group">
     <label for="imgUrl">Image URL</label>
-    <input id="imgUrl" type="text" class="form-control" />
+    <input ngModel name="imgUrl" id="imgUrl" type="text" class="form-control" />
   </div>
   <button class="btn btn-primary">Save</button>
 </form>
